Homeworks/HW5/Terminal Saved Output (5)
Last login: Fri Oct  6 15:35:44 on ttys000
(base) school@Katies-MacBook-Air-2 ~ % cd /Users/school/Desktop/Test-Rep/Homeworks/HW5
(base) school@Katies-MacBook-Air-2 HW5 % python3 HW5.3.py
  File "HW5.3.py", line 27
    print(tabulate(roots, headers = ["x", "y", "z"]cd))
                                                   ^
SyntaxError: invalid syntax
(base) school@Katies-MacBook-Air-2 HW5 % python3 HW5.3.py
  File "HW5.3.py", line 27
    print(tabulate(roots, headers = ["x", "y", "z"]cd))
                                                   ^
SyntaxError: invalid syntax
(base) school@Katies-MacBook-Air-2 HW5 % python3 HW5.3.py
      x        y        z
-------  -------  -------
1.10606  1.42424  1.42424
1.09393  1.36174  1.36174
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
Order of convergence of x is 2
Order of convergence of y is 2
Order of the convergence of z is 2
(base) school@Katies-MacBook-Air-2 HW5 % python3 HW5.3.py
      x        y        z
-------  -------  -------
1.10606  1.42424  1.42424
1.09393  1.36174  1.36174
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
1.09364  1.36033  1.36033
Order of convergence of x is 2
Order of convergence of y is 2
Order of the convergence of z is 2
(base) school@Katies-MacBook-Air-2 HW5 % 
